fix: hltb plugin spacing

--- a/src/css/plugins/hltb.css
+++ b/src/css/plugins/hltb.css
@@ -1,6 +1,6 @@
 #hltb-for-millennium {
     z-index: 999999;
-    bottom: 16px;
+    bottom: 16px !important;
     right: 16px !important;
 }
 
